# celery-sample

./: docker-compose.yml
workers/test_celery/: .dockerignore  Dockerfile  app.py  pyproject.toml  requirements.txt  run_tasks.py  tasks.py
