[tool.poetry]
name = "test_celery"
version = "0.1.0"
description = ""
authors = ["Alexander Varchenko <alexander.varchenko@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.6"
amqp = "*"
billiard = "*"
celery = "==4.4.0"
importlib-metadata = "*"
kombu = "*"
pytz = "*"
vine = "*"
zipp = "*"
redis = "*"
flower = "*"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
run-celery = "celery -A test_celery worker --loglevel=info"
run-task = "test_celery:run_tasks"